Test JS with mocha and lint with ESLint

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,8 @@ name: Test
 on: [push]
 
 jobs:
-  build:
+  test_python:
+    name: Python tests
 
     runs-on: ${{ matrix.os }}
     strategy:
@@ -32,3 +33,21 @@ jobs:
           path: coverage.xml
         # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
+
+  test_js:
+    name: JavaScript tests
+
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm ci
+      - run: npm run lint
+      - run: npm test
