--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,13 @@
 [tox]
+min_version = 4.0
 isolated_build = True
 envlist =
-    py38-django{22,30,31,32,40,41,42}-pytest
-    py39-django{22,30,31,32,40,41,42}-pytest
-    py310-django{32,40,41,42}-pytest
-    py311-django{41,42}-pytest
-    lint-type
-
-[gh-actions]
-python =
-    3.8: py38
-    3.9: py39
-    3.10: py310
-    3.11: py311, lint-type
+    lint-test-type
+labels =
+    py3.8 = test-py38-django{22,30,31,32,40,41,42}
+    py3.9 = test-py39-django{22,30,31,32,40,41,42}
+    py3.10 = test-py310-django{32,40,41,42}
+    py3.11 = test-py311-django{41,42}, lint-type
 
 [testenv]
 extras = test
@@ -38,5 +33,5 @@ commands =
     format: ruff check --fix {toxinidir} {posargs}
     lint: black {toxinidir} --check --diff {posargs}
     lint: ruff check {toxinidir} {posargs}
-    pytest: pytest --cov={toxinidir} --cov-report=term --cov-report=xml {posargs}
+    test: pytest --cov={toxinidir} --cov-report=term --cov-report=xml {posargs}
     type: mypy {posargs}
