Create contribution guide

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,3 +8,4 @@ nav:
     - Home: index.md
     - Installation: installation.md
     - User Guide: user_guide.md
+    - Contributing: contributing.md
