--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,8 @@ doc = [
 ]
 test = [
     "black",
+    "beautifulsoup4",
+    "lxml",
     "mypy",
     "pytest>=7",      # >=7 required for pythonpath option
     "pytest-cov",
