Only fix isort errors in format tox env

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ deps =
     py311-django41: Django>=4.1.3
 commands =
     format: black {toxinidir} {posargs}
-    format: ruff check --fix {toxinidir} {posargs}
+    format: ruff check --select I --fix {toxinidir} {posargs}
     lint: black {toxinidir} --check --diff {posargs}
     lint: ruff check {toxinidir} {posargs}
     test: pytest --cov={toxinidir} --cov-report=term --cov-report=xml {posargs}
