--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ test = [
 ]
 
 [tool.coverage.run]
-omit = ["tests/fake_project/*"]
+omit = ["test_project/*"]
 
 [tool.mypy]
 warn_unused_configs = true
@@ -80,7 +80,7 @@ files = [
 DJANGO_SETTINGS_MODULE = "fake.settings"
 pythonpath = [
   ".",
-  "tests/fake_project",
+  "test_project",
 ]
 
 [tool.ruff]
