--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,9 +4,31 @@ site_url: https://django-gesha.readthedocs.io/en/latest/
 repo_url: https://github.com/ely-as/django-gesha
 edit_uri: blob/main/docs/
 theme:
-    name: material
+  name: material
+  palette:
+    scheme: slate
+    primary: gesha
+    accent: amber
+  features:
+    - content.code.annotate
+markdown_extensions:
+  - admonition
+  - footnotes
+  - pymdownx.details
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
+  - tables
 nav:
-    - Home: index.md
-    - Installation: installation.md
-    - User Guide: user_guide.md
-    - Contributing: contributing.md
+  - Home: index.md
+  - Installation: installation.md
+  - User Guide: user_guide.md
+  - Contributing: contributing.md
+extra_css:
+  - stylesheets/extra.css
