--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,7 @@ nav:
   - Home: index.md
   - Installation: installation.md
   - User Guide: user_guide.md
+  - Settings: settings.md
   - Contributing: contributing.md
   - Changelog: changelog.md
 extra_css:
