--- a/tox.ini
+++ b/tox.ini
@@ -2,12 +2,13 @@
 min_version = 4.0
 isolated_build = True
 envlist =
-    lint-test-type
+    static-test
 labels =
-    py3.8 = test-py38-django{22,30,31,32,40,41,42}
-    py3.9 = test-py39-django{22,30,31,32,40,41,42}
-    py3.10 = test-py310-django{32,40,41,42}
-    py3.11 = test-py311-django{41,42}, lint-type
+    # Used by .github/workflows/test.yml - envs to run for each py version
+    3.8 = test-py38-django{22,30,31,32,40,41,42}
+    3.9 = test-py39-django{22,30,31,32,40,41,42}
+    3.10 = test-py310-django{32,40,41,42}
+    3.11 = static, test-py311-django{41,42}
 
 [testenv]
 extras = test
@@ -29,9 +30,9 @@ deps =
     py310-django32: Django>=3.2.9
     py311-django41: Django>=4.1.3
 commands =
-    format: black {toxinidir} {posargs}
-    format: ruff check --select I --fix {toxinidir} {posargs}
-    lint: black {toxinidir} --check --diff {posargs}
-    lint: ruff check {toxinidir} {posargs}
-    test: pytest --cov={toxinidir} --cov-report=term --cov-report=xml {posargs}
-    type: mypy {posargs}
+    format: black {tox_root}
+    format: ruff check --select I --fix {tox_root}
+    static: black {tox_root} --check --diff
+    static: ruff check {tox_root}
+    static: mypy
+    test: pytest --cov={tox_root} --cov-report=term --cov-report=xml
