--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0-alpha3",
   "description": "JavaScript utilities for Django projects.",
   "main": "gesha/static/gesha/dist/js/django-gesha.bundle.min.js",
+  "types": "./js_dist/main.d.ts",
   "directories": {
     "test": "js_tests"
   },
@@ -26,6 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "browserify": "^17.0.0",
+    "del": "^7.0.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.38.0",
     "fancy-log": "^2.0.0",
