Use --fix-only flag for ruff formatting
And avoid using select in the tox command so we respect what's
defined in the fixable option in pyproject.toml

--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ deps =
     py311-django41: Django>=4.1.3
 commands =
     format: black {tox_root}
-    format: ruff check --select I --fix {tox_root}
+    format: ruff check --fix-only {tox_root}
     static: black {tox_root} --check --diff
     static: ruff check {tox_root}
     static: mypy
