--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint": "^8.38.0",
     "fancy-log": "^2.0.0",
     "gulp": "^4.0.0",
-    "gulp-cssmin": "^0.2.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-terser": "^2.1.0",
