--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,9 @@ readme = {file = ["README.md"], content-type = "text/markdown"}
 where = ["."]
 include = ["gesha"]
 
+[tool.setuptools.package-data]
+gesha = ["py.typed"]
+
 [project.optional-dependencies]
 doc = [
     "mkdocs",
