--- a/tox.ini
+++ b/tox.ini
@@ -35,4 +35,4 @@ commands =
     static: black {tox_root} --check --diff
     static: ruff check {tox_root}
     static: mypy
-    test: pytest --cov={tox_root} --cov-report=term --cov-report=xml
+    test: pytest --cov={tox_root} --cov-report=term --cov-report=json
