--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,13 @@ jobs:
           pip install tox
       - name: Run tests
         run: tox -m ${{ matrix.python }}
+      - name: Upload coverage report
+        run: |
+          curl -X POST \
+          -H "Authorization: Bearer ${{ secrets.COV_ELYAS_TOKEN }}" \
+          -F file=@coverage.json \
+          https://cov.ely.as/github/${{ github.repository }}/${{ github.ref_name }}/
+        if: ${{ github.ref_name == 'main' }}
 
   test_js:
     name: JavaScript tests
